Moos Changelog

!	Security fix and important improve;
*	Common bug fix and improve;
+	Feature add;
-	Feature remove;


2.0.0
=====
2015-MM-DD
- Remove Squid and Varnish;
+ Add HAProxy;
+ Add Name Service Caching Daemon (NSCD);
+ Support log user shell commands in syslog (/var/log/secure);
* Optimize L.N.M.P and library packages install policy;
* Speed up service installation;
* Optimize system service on/off policy;
* Enhance Bash command alias;
* Enhance vimrc profile;
* Refine every steps of system config;
* Installation will be abort if YUM install/update failed;
* Fix YUM repository config file;
* Fix installation TUI bug;
- Remove service.sh script, merge with config_sys.sh;


1.6.4
=====
2015-02-24
+ Add server tools;
+ Log rotate will keep last 30 days logs, old logs will be deleted;
+ Before install a service, Moss will check if it has been running on host;
* Update YUM repository config file. Using multi-repositories instead of single;
* Fix Percona Xtrabackup script run fail;
* Fix Nginx log rotate bug which it always rotate log to /var/log/nginx;
* Reduce installation time when select mode 4 (Install Nginx only);


1.6.3
=====
2014-12-24
* New Moss installation TUI;
+ Add vim and wget packages check and install;
* Fix root's mailbox fill up with ntpdate time sync message;
! Fix Zabbix Agent can not be started;
! Fix SaltStack Minion can not be started;
* Remove Zabbix Agent 3rd-templates;
* Moss did not require set OS root password. If didn't set, Moss will keep
  current root password and continue install;
* Moss did not require set OS hostname. If didn't set, Moss will keep current
  hostname and continue install;
* Support install Nginx standalone by installation mode 4;
* Merry X'mas :-)


1.6.2
=====
2014-11-30
* Fix MySQL logs rotate;
* Fix www user home directory location;
* Add SaltStack minion. According to user configure;
* Add Zabbix Nginx status monitor configuration and script;
* Enhance Zabbix agent configuration;