@@ -107,9 +107,7 @@ readonly MYSQL_MULADMIN_USER='multi_admin'
 # Multi-MySQL admin user's password
 readonly MYSQL_MULADMIN_PASS=''
 
-
-
-## Percona Xtrabackup Settings
+# Percona Xtrabackup Settings
 # Database Name.
 readonly XTRABACKUP_BACKUP_DIR='/backup/mysql'
 
@@ -179,31 +177,6 @@ readonly RDS_DATA_DIR='/data/redis'
 
 # Redis master server IP address.
 readonly RDS_MASTER_IP='192.168.0.1'
-
-
-
-## Squid & Varnish Settings
-# Du to you can only choose one proxy-cache server,
-# so you need only set one of Squid or Varnish.
-# You don't need to set both of them.
-
-# Squid loadbalance VIP or backend web server IP.
-readonly SQD_VIP='192.168.0.1'
-
-# Squid cache DIR.
-readonly SQD_CACHE_DIR='/data/squid_cache'
-
-# Squid server administrator's E-Mail
-readonly SQD_EMAIL='webmaster@example.com'
-
-# Squid server hostname.
-readonly SQD_VHOSTNAME='cache.example.com'
-
-# Squid loadbalance VIP or backend web server IP.
-readonly VNS__VIP='192.168.0.1'
-
-# Varnish cache file
-readonly VNS_CACHE_FILE='/data/varnish/varnish_storage.bin'
 
 
 
