@@ -9,6 +9,7 @@ Moos Changelog
 2.0.0
 =====
 2015-MM-DD
+! Support uninstall Moss. Select 'u' in installaion options;
 - Remove Squid and Varnish;
 + Add HAProxy;
 + Add Name Service Caching Daemon (NSCD);
